animated fuck, new background

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -28,7 +28,10 @@
 
   <header id="page-header" role="banner">
 
-    <a href="/"><h1>Lynn.io</h1></a>
+    <a id="title" href="/">
+      {% include fuck.svg %}
+      <h1>Lynn.io</h1>
+    </a>
 
     <ul class="social-links">
       <li>
