--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -26,6 +26,7 @@
 
 // Components
 // ------------------------------------------------------------------
+@import "components/fuck-colors";
 @import "components/syntax";
 
 // Sections of Page
