--- a/app/_scss/dependencies/variables/_typography.scss
+++ b/app/_scss/dependencies/variables/_typography.scss
@@ -4,6 +4,7 @@
 
 @import "app/fonts/social-circle/_ss-social-circle.scss";
 @import "app/fonts/ss-air/_ss-air.scss";
+@import "app/fonts/ss-junior/_ss-junior.scss";
 
 $heading-stack : "jaf-bernino-sans", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 $body-stack    : Avenir, Helvetica, Arial, sans-serif !default;
