--- a/app/_includes/scripts.html
+++ b/app/_includes/scripts.html
@@ -3,7 +3,9 @@
 
 <!-- build:js({app,.tmp}) /js/script.js -->
   <script src="/_bower_components/colorbox/jquery.colorbox.js"></script>
+  <script src="/_bower_components/moment/moment.js"></script>
   <script src="/js/plugins.js"></script>
+  <script src="/js/behaviors/relative_date.js"></script>
   <script src="/js/main.js"></script>
 <!-- endbuild -->
 
