--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -27,12 +27,12 @@
 
 </head>
 
-<body class="preload halloween {% if page.post-image %}custom-image{% endif %}">
+<body class="preload {% if page.post-image %}custom-image{% endif %}">
 
   <header id="page-header" role="banner">
 
     <a id="title" href="/">
-      {% include fuck-halloween.svg %}
+      {% include fuck.svg %}
       <h1>Lynn.io</h1>
     </a>
 
