--- a/app/_scss/areas/_page-header.scss
+++ b/app/_scss/areas/_page-header.scss
@@ -5,8 +5,8 @@
 #page-header {
   background-image: url("#{$image-path}/color-blocks.jpg");
   background-position: left top;
-  background-size: auto 100%;
   background-repeat: repeat;
+  background-size: auto 100%;
   display: block;
   float: left;
   height: 100%;
@@ -19,8 +19,8 @@
   }
 
   @include bodhi(compact) {
-    background-size: 125px auto;
     background-position: 0 0;
+    background-size: 125px auto;
     float: none;
     height: 250px;
     min-height: 0;
@@ -99,7 +99,7 @@
       border-top-color: $primary-color;
     }
 
-    body.#{$holiday} & {
+    body.holiday-#{$holiday} & {
       background-image: url("#{$image-path}/color-blocks-#{$holiday}.jpg");
     }
 
