--- a/app/_scss/base/_default.scss
+++ b/app/_scss/base/_default.scss
@@ -107,14 +107,13 @@ textarea {
   resize: vertical;
 }
 
-/* ==========================================================================
-   Browse Happy prompt
-   ========================================================================== */
+//  Browse Happy
+// ------------------------------------------------------------------
 
 .browsehappy {
-  margin: 0.2em 0;
   background-color: #ccc;
   color: $black;
+  margin: 0.2em 0;
   padding: 0.2em 0;
 }
 
